# kinect_LBRiiwa_calibration

./: CMakeLists.txt  README.md  iiwa_kinect_calibration.kdev4  package.xml  read_calibration.py~  result.txt
.kdev4/: iiwa_kinect_calibration.kdev4
src/: calibrator (copy).cpp  calibrator.cpp  calibrator_UDP_Server.cpp  ibvstest2 (copy).cpp
